<resources>
    <string name="app_name">Taxalator</string>
    <string name="get_started">Get Started</string>
    <string name="splash_title">Welcome to Taxlator</string>
    <string name="base_salary">Base Salary</string>
    <string name="credit_points">Credit Points</string>
    <string name="pension">Pension</string>
    <string name="percentage">%</string>
    <string name="calculate">Calculate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="settings">Settings</string>
    <string name="subscribe_15"><![CDATA[subscribe -> 15$]]></string>
</resources>